// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`createHttpRoomContext > should return an http room context with expected shape 1`] = `
[
  "members",
]
`;

exports[`createRoomContext > should return a room context object with expected shape 1`] = `
[
  "join",
  "leave",
  "members",
]
`;
